k8s/gateway.yml
# Create Gateway and HTTPRoute resources

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ngf-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
    hostname: "*.example.com"
